<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            android:visible="false"/>

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false"/>

        <item
            android:id="@+id/nav_receita"
            android:icon="@drawable/ic_dinner"
            android:title="@string/menu_receita" />

        <item
            android:id="@+id/nav_medida"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_medida"
            android:visible="false"/>

        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"/>
    </group>
</menu>