<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yorkdecorsoftware.chefsstation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.yorkdecorsoftware.chefsstation.ui.ingrediente.IngredienteFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_ingredientes_tab" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.yorkdecorsoftware.chefsstation.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_receita"
        android:name="com.yorkdecorsoftware.chefsstation.ui.receita.ReceitaFragment"
        android:label="@string/menu_receita"
        tools:layout="@layout/fragment_receita" />

    <fragment
        android:id="@+id/nav_medida"
        android:name="com.yorkdecorsoftware.chefsstation.ui.modopreparo.MedidaFragment"
        android:label="@string/menu_medida"
        tools:layout="@layout/fragment_medida" />
</navigation>